5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1578_1559.log
== TEST (2019-03-13 15:45:28) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".opper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Ada Lovelace foi a primeira programadora da historia.".opper())
AttributeError: 'str' object has no attribute 'opper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:45:58) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.upper()".)
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper()".)
                                                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:46:36) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.upper()")
-- OUTPUT:
Ada Lovelace foi a primeira programadora da historia.upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:47:37) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper("Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:48:42) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.").upper()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Ada Lovelace foi a primeira programadora da historia.").upper()
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:50:47) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper(ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA))
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia.".upper(ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA))
                                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:51:21) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".))
-- EXECUTION TIME:
0.14125
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print("Ada Lovelace foi a primeira programadora da historia.".))
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:51:31) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".)

-- EXECUTION TIME:
0.195823
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print("Ada Lovelace foi a primeira programadora da historia.".)
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:51:39) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.")

-- EXECUTION TIME:
0.221019
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
Ada Lovelace foi a primeira programadora da historia.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:52:33) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print("Ada Lovelace foi a primeira programadora da historia.")

-- OUTPUT:
Ada Lovelace foi a primeira programadora da historia.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:52:42) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print("Ada Lovelace foi a primeira programadora da historia.")

-- EXECUTION TIME:
0.163725
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
Ada Lovelace foi a primeira programadora da historia.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 11:11:11) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.")

-- EXECUTION TIME:
0.138394
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
